# b3q

./: .gitignore  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint-test-cover-docs.yml
b3q/: __init__.py  b3q.py
docs/: conf.py  toc.rst
docs/_source/: b3q.rst
src/b3q/: b3q.py
